# piratepaperwallet

./: .gitignore  README.md  signbinaries.sh
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: paper.rs  pdf.rs
qtlib/: Cargo.toml
