[package]
name = "piratepaperlib"
version = "0.1.0"
authors = ["mrlynch"]
edition = "2018"

[features]
default = ["printpdf", "systemrand"]
systemrand = []

[dependencies]
rand = "0.8.4"
rand_chacha = "0.3.1"
hex = "0.4.3"
bech32 = "0.8.1"
# zcash_primitives = {  git = "https://github.com/zcash/librustzcash", rev = "5a48d179b8434a0318e7e19dda506e245a904092" }
zcash_primitives = {  git = "https://github.com/zcash/librustzcash", tag = "0.5.0" }
json = "0.12.4"
qrcode = { version = "0.12.0", default-features = false }
printpdf = { version = "0.4.0", optional = true }
libsecp256k1 = "0.6.0"
ripemd160 = "0.9.1"
sha2 = "0.9.5"
base58 = "0.1.0"
tiny-bip39 = "0.8.0"

[dev-dependencies]
array2d = "0.1.0"
